# opendronelog-overlay

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
examples/: gauges.config.yaml  overlay.config.yaml  quick-test.config.yaml
flightframe/: ODL_2_AD.py  __init__.py  cli.py  config.py  csv_parser.py  dji_import.py  encoding.py  renderer.py  srt_exporter.py
opendronelog_overlay/: __init__.py  cli.py  config.py  csv_parser.py  dji_import.py  encoding.py  renderer.py  srt_exporter.py
tests/: test_alignment.py  test_config.py  test_dji_import.py  test_input_autodetect.py  test_renderer.py
