[project]
name = "opendronelog-overlay"
version = "0.1.0"
description = "Configurable telemetry card overlay for drone videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "opencv-python>=4.9.0",
  "numpy>=1.26.0",
  "polars>=1.6.0",
  "PyYAML>=6.0.0",
  "typer>=0.12.0",
  "imageio-ffmpeg>=0.6.0",
  "streamlit-drawable-canvas>=0.9.3",
]

[project.scripts]
opendronelog-overlay = "opendronelog_overlay.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["opendronelog_overlay*"]
